# godbiao

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  bid_api.py  config.py  docker-compose.yml  import_products.py  llm_client.py  models.py  parser.py  product_data.xlsx  pyproject.toml
.github/workflows/: feishu-notify.yml  feishu-webhook.yml  five-events.yml  multi-event-test.yml  multi-no-expr.yml  test-script.yml  test.yml  three-events.yml
docs/: PRODUCT.md
templates/: bidding.html  index.html  result.html  review.html
