[project]
name = "godbiao"
version = "1.0.0"
description = "AI 智能标书比对系统 - 上传投标文件+招标要求，自动逐条核查"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "峰Sir", email = "97593305@qq.com"}
]
keywords = ["bid", "tender", "ai", "llm", "document-comparison"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "pymupdf>=1.23",
    "aiofiles>=23.2",
    "aiosqlite>=0.19",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/hello-fengsir/godbiao"
Repository = "https://github.com/hello-fengsir/godbiao"
Issues = "https://github.com/hello-fengsir/godbiao/issues"
